--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ header {
     position: sticky;
     top: 0;
     left: 0;
+    z-index: 1;
     background-color: var(--accent);
     padding-block: var(--padding-header-block);
 }
@@ -105,7 +106,8 @@ nav {
     position: relative;
     transform-style: preserve-3d;
     transform-origin: center;
-    transition: transform 1s steps(10, end);
+    /* transition: transform 1s steps(10, end); */
+    transition: transform 1s ease-in-out;
     aspect-ratio: 2/3;
 }
 .card.is-flipped {
@@ -115,11 +117,10 @@ nav {
     position: absolute;
     width: 100%;
     height: 100%;
-    font-weight: bold;
     backface-visibility: hidden;
 }
 .card-face--back {
-    --s: 50px; /* control the size of pattern*/
+    --s: 50px;
     --c1: var(--primary);
     --c2: var(--secondary);
     --c3: var(--accent);
