--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ nav {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    filter: grayscale(100%);
+    /* filter: grayscale(100%); */
 }
 
 /* --------- GAMEBOARD END ---------*/
