--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
 :root[data-theme="light"] {
     --text: rgb(9, 7, 13);
     --background: rgb(228, 223, 236);
