--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@
         --c1: var(--primary);
         --c2: var(--secondary);
         --c3: var(--accent);
-
         background: conic-gradient(from 15deg at 86.6%, var(--c3) 25%, var(--c2) 0 150deg, #0000 0),
             conic-gradient(from -75deg at 50% 13.39%, var(--c1) 60deg, var(--c3) 0 150deg, var(--c2) 0 210deg, #0000 0),
             conic-gradient(from 15deg at 36.6% 63.4%, var(--c1) 60deg, var(--c3) 0 150deg, var(--c1) 0 210deg, var(--c2) 0 75%, var(--c3) 0);
@@ -65,7 +64,6 @@
     }
     html[data-cardback="christmas"] .card-face--back{
         --s: 42px; /* control the size */
-
         --_c:#0000,#fff 1deg 79deg,#0000 81deg;
         --g0:conic-gradient(from 140deg at 50% 87.5% ,var(--_c));
         --g1:conic-gradient(from 140deg at 50% 81.25%,var(--_c));
@@ -426,6 +424,7 @@ nav {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    outline: 4px solid var(--accent);
 }
 
 .card-face--front {
